[package]
name = "terraform_reference_vultr_test_suite"
description = "RCNA Reference Vultr Terraform module deployment test suite"
documentation = "https://architecture.yarosh.dev/vultr/organizations"
version = "0.0.1"
authors = ["Yuriy Yarosh <yuriy@yarosh.dev>"]
rust-version = "1.88.0"
edition = "2024"
publish = false

[[bin]]
name = "terraform_reference_vultr_test"
path = "src/test_suite.rs"

[dependencies]
tokio = { version = "^1.45", features = ["full"] }
futures = "^0.3"

anyhow = "^1.0"
tracing = "^0.1"
tracing-subscriber = "^0.3"

[dev-dependencies]
goldie = "^0.5"

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"

[profile.dev]
lto = false
panic = "abort"
debug-assertions = true
overflow-checks = true
opt-level = 0
incremental = true

[profile.release]
lto = true
panic = "abort"
debug-assertions = false
overflow-checks = true
opt-level = 3
incremental = true
